syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.common.domain";
option java_outer_classname = "Response";

message CWclassResponse {
  int32 ResultCode = 1;
  string Message = 2;
  bytes Data = 3;
}