syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.lobby.home.domain.param.proto";
option java_outer_classname = "MyInstitutionList";

message SWclassMyInstitutionList {

  message SWclassMyInstitution {
    string InsName = 1;
    string StdUseYn = 2;
  }

  repeated SWclassMyInstitution swclassMyInstitution = 1;
}